test/compile-fail/scope/use-mod-self/top.rhdl
mod a {}

use a::self;
